# bondybird

./: Cargo.toml  Makefile  README.md
.github/.github/workflows/: ci.yml  release.yml
src/: acl.rs  address.rs  api.rs  class_of_device.rs  constants.rs  event_handler.rs  host.rs  lib.rs  manager.rs  processor.rs  stack.rs
src/a2dp/: avdtp.rs  codec.rs  mod.rs  profile.rs
src/host/: api_processor.rs  internal_command_processor.rs  mod.rs
src/l2cap/: channel.rs  mod.rs  packet.rs  processor.rs  signaling.rs
src/sdp/: attribute.rs  client.rs  mod.rs  protocol.rs  record.rs  server.rs
