[package]
name = "bondybird"
version = "0.1.0"
edition = "2024"
description = "🐦 Bondybird: BR/EDR (Classic) Bluetooth Host implementation for embedded systems"
documentation = "https://docs.rs/bondybird"
repository = "https://github.com/rttfd/bondybird"
license = "MIT"
keywords = ["bondybird", "no_std", "bluetooth"]
authors = ["rttf <contact@rttf.dev>"]

[features]
default = []
rp = ["dep:embassy-rp", "dep:embedded-storage-async", "dep:bytemuck"]

[dependencies]
bt-hci = "0.3.3"
bytemuck = { version = "1.23.1", features = ["derive"], optional = true }
defmt = "1.0.1"
embassy-futures = "0.1.1"
embassy-rp = { version = "0.4.0", optional = true, features = ["rp2040"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = "0.4.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage-async = { version = "0.4.1", optional = true }
heapless = "0.8.0"
renik = "0.7.1"

# test
cyw43 = { version = "0.3.0", features = ["defmt", "bluetooth"] }

[patch.crates-io]
bt-hci = { git = "https://github.com/rttfd/bt-hci.git", branch = "renik" }
cyw43 = { git = "https://github.com/rttfd/embassy.git", branch = "renik" }
embassy-futures = { git = "https://github.com/rttfd/embassy.git", branch = "renik" }
embassy-rp = { git = "https://github.com/rttfd/embassy.git", branch = "renik" }
embassy-sync = { git = "https://github.com/rttfd/embassy.git", branch = "renik" }
embassy-time = { git = "https://github.com/rttfd/embassy.git", branch = "renik" }
