[package]
name = "bondybird"
version = "0.1.0"
edition = "2024"
description = "🐦 Bondybird: BR/EDR (Classic) Bluetooth Host implementation for embedded systems"
documentation = "https://docs.rs/bondybird"
repository = "https://github.com/rttfd/bondybird"
license = "MIT"
keywords = ["bondybird", "no_std", "bluetooth"]
authors = ["rttf <contact@rttf.dev>"]


[dependencies]
bt-hci = "0.3.3"
defmt = "1.0.1"
embassy-sync = { version = "0.7.0", features = ["defmt"] }
embassy-time = "0.4.0"
heapless = "0.8.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }

[patch.crates-io]
bt-hci = { git = "https://github.com/rttfd/bt-hci.git", branch = "renik" }
embassy-sync = { git = "https://github.com/rttfd/embassy.git", branch = "renik" }
embassy-time = { git = "https://github.com/rttfd/embassy.git", branch = "renik" }
